扁平化框架

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,8 @@
 {
-    "workspace.library": [],
-    "diagnostics.disable": []
+    "workspace.library": [
+        "c:\\Users\\ruilo\\.vscode\\extensions\\droidxrx.gameguardian-lua-0.0.5\\EmmyLua"
+    ],
+    "diagnostics.disable": [
+        "inject-field"
+    ]
 }
